# burnout

./: .gitignore  README.md
backend/: .env_example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  mypy.ini  pyproject.toml  servers.json
backend/app/: celery.py  config.py  database.py  main.py
backend/app/common/: router.py  schema.py  tasks.py
backend/app/migration/: README  env.py  script.py.mako
backend/app/migration/versions/: 2025_11_15_000000-d3b29e0a3d09_create_employee_kpi_tables.py
backend/app/models/: __init__.py  employee.py
backend/app/scripts/: load_csv.py
backend/requirements/input/: requirements-dev.in  requirements.in
backend/requirements/lock/: requirements-dev.txt  requirements.txt
