[project]
name = "burnout_backend"
version = "0.0.1"
requires-python = ">=3.12.2,<3.13"

[tool.isort]
profile = 'black'
line_length = 120
indent = '    '
multi_line_output = 3
skip_glob = ['**/migration', '.venv/*']
default_section = 'THIRDPARTY'
known_first_party = 'app'
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = 'migration|\.venv'

[tool.ruff]
exclude = [".venv", "migration"]

[tool.mypy]
exclude = ["migrations"]
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["celery.*", "openpyxl.*"]
ignore_missing_imports = true